tests/ui/feature-gates/feature-gate-generic-const-args.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-generic-const-args.rs:4:49
   |
LL | type const INC<const N: usize>: usize = const { N + 1 };
   |                                                 ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

